--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "antd": "^4.21.3",
     "highcharts": "^10.1.0",
     "highcharts-react-official": "^3.1.0",
     "react": "17.x",
