--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
     "antd": "^4.21.3",
-    "highcharts": "^10.1.0",
-    "highcharts-react-official": "^3.1.0",
+    "echarts": "^5.3.3",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.26"
