--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ant-design/pro-layout": "^6.5.0",
     "antd": "^4.21.3",
     "echarts": "^5.3.3",
+    "moment": "^2.29.4",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.26"
@@ -30,8 +31,16 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.26",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
